--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -1,7 +1,23 @@
+#Spring configuration
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:33060/parkingapp?useUnicode=true&serverTimezone=GMT-5
-spring.datasource.username=root
-spring.datasource.password=password
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
-spring.jackson.time-zone=GMT-5
+spring.jackson.time-zone=${TIMEZONE}
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
+server.servlet.context-path=/parking-app/api/v1/
+server.port=8080
+spring.web.locale-resolver=fixed
+
+#Internalization
+spring.messages.basename=messages/messages
+spring.messages.cache-duration=-1
+spring.messages.encoding=UTF-8
+spring.messages.use-code-as-default-message=true
+
+#Datasource
+spring.datasource.url=jdbc:mysql://${DB_HOST}:${DB_PORT}/${DB_NAME}?useUnicode=true&serverTimezone=${TIMEZONE}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+
+
+parking.capacity=${PARKING_CAPACITY}
+price.per.minute=${PRICE_PER_MINUTE}
