Add exceptions handler

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -5,6 +5,7 @@ spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 server.servlet.context-path=/parking-app/api/v1/
 server.port=8080
 spring.web.locale-resolver=fixed
+server.error.include-message=always
 
 #Internalization
 spring.messages.basename=messages/messages
